# npsim

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.devcontainer/: README.md  devcontainer.json
.github/: asan.supp  lsan.supp  tsan.supp  ubsan.supp
.github/workflows/: convert-to-dot.yml  convert-to-step.yml  linux-eic-shell.yml
cmake/: NPDetConfig.cmake.in
scripts/: plot_overhead_pdg.py  plot_overhead_spatial.py  plot_timing_profile.py  sanitize_hepmc3.py
src/config/: CMakeLists.txt  EicDet-config.cxx  NPDet-config.cxx  NPDetConfig.cmake.in  NPDetConfig.h.in  NPDetConfigVersion.cmake.in
src/dd4pod/: CMakeLists.txt
src/dd4pod/python/: npsim.in  npsim.py
src/dd4pod/python/npsim/: DDG4.py
src/dd4pod/python/npsim/DDSim/: DD4hepSimulation.py
src/dd4pod/python/npsim/DDSim/Helper/: Action.py  Filter.py  Gun.py  Physics.py
src/east/: CMakeLists.txt
src/east/src/: eASTPhysicsListPlugin.cxx
src/geocad/: CMakeLists.txt
src/geocad/include/: TGeoToStep.h
src/geocad/src/: TGeoToOCC.cxx  TGeoToOCC.h  TGeoToStep.cxx  TOCCToStep.cxx  TOCCToStep.h
src/geocad/tests/: CMakeLists.txt  integration_create_step.cxx  unit_partial_tree.cxx
src/plugins/: CMakeLists.txt  README.md
src/plugins/include/npdet/: DetectorChecksumRunAction.h  DetectorVersionRunAction.h  EICInteractionVertexBoost.h  EICInteractionVertexSmear.h  G4PrimaryTransformerSetKEToleranceRunAction.h  OpticalPhotonEfficiencyStackingAction.h  PerformanceProfileSteppingAction.h  PerformanceProfileTrackingAction.h
src/plugins/src/: DetectorChecksumRunAction.cxx  DetectorVersionRunAction.cxx  EICCerenkovPhysics.cpp  EICInteractionVertexBoost.cxx  EICInteractionVertexSmear.cxx  EICOpticalPhotonPhysics.cpp  EICScintillationPhysics.cpp  G4PrimaryTransformerSetKEToleranceRunAction.cxx  Geant4TVEicParticleHandler.cpp  Geant4TVEicParticleHandler.cxx  Geant4TVEicParticleHandler.md  OpticalPhotonEfficiencyStackingAction.cxx  PerformanceProfileEventAction.cxx  PerformanceProfileSteppingAction.cxx  PerformanceProfileTrackingAction.cxx
src/python/: CMakeLists.txt  npsim.py
src/tools/: CMakeLists.txt
src/tools/include/: clipp.h
src/tools/src/: dd_web_display.cxx  npdet_fields.cxx  npdet_info.cxx  npdet_mat_budget.cxx  npdet_to_dot.cxx  npdet_to_gdml.cxx  npdet_to_step.cxx  npdet_to_step_cli.cxx  npdet_to_step_cli.h  npdet_to_teve.cxx  settings.cxx  settings.h
src/tools/tests/: CMakeLists.txt  unit_settings.cxx
